Basic 1 Section Complete
Create User model, add enteries, display data from DB on Users.index

--- a/project/app/views/users/index.html.erb
+++ b/project/app/views/users/index.html.erb
@@ -1,4 +1,23 @@
 <% content_for :title do %>Display all Users<% end %>
 
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<h1>Users:</h1>
+<table>
+	<thead>
+		<tr>
+			<th>Id:</th>
+			<th>First Name:</th>
+			<th>Last Name:</th>
+			<th>Email:</th>
+		</tr>
+	</thead>
+	<tbody>
+		<% @user_data.each do |user| %>
+			<tr>
+				<td><%= user.id %></td>
+				<td><%= user.first_name %></td>
+				<td><%= user.last_name %></td>
+				<td><%= user.email %></td>
+			</tr>
+		<% end %>
+	</tbody>
+</table>
