--- a/project/app/views/users/new.html.erb
+++ b/project/app/views/users/new.html.erb
@@ -2,23 +2,45 @@
 
 <h1>Users New</h1>
 
-<form action="" method="post">
+<form action="/users" method="post">
 	<fieldset>
 		<legend>New Post</legend>
-		<input type="hidden" name="">
-		
+		<input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
 		<div class="row">
-			<div class="large-12 columns">
-				<label class="left inline">Name</label>
-				<input type="text" name="name" placeholder="Name">
+			<div class="large-6 columns">
+				<label class="left inline">First Name</label>
+				<input type="text" name="user[first_name]" placeholder="First Name">
+			</div>
+			<div class="large-6 columns">
+				<label class="left inline">Last Name</label>
+				<input type="text" name="user[last_name]" placeholder="Last Name">
 			</div>
 		</div>
 
 		<div class="row">
+			<div class="large-6 columns">
+				<label class="left inline">Email Address:</label>
+				<input type="text" name="user[email]" placeholder="Email Address">
+			</div>
+			<div class="large-6 columns">
+				<label class="left inline">Password</label>
+				<input type="text" name="user[password]" placeholder="Password">
+			</div>
+		</div>
+		<div class="row">
 			<div class="large-12 columns">
-				<label class="left inline">Message</label>
-				<input type="text" name="message" placeholder="Type your message...">
+				<input type="submit" class="button" name="submit" value="Submit">
 			</div>
 		</div>
 	</fieldset>
 </form>
+
+ <% if @new_user.errors.any? %>
+    <div id="error_explanation">
+      <ul>
+      <% @new_user.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
