--- a/project/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/project/app/assets/stylesheets/foundation_and_overrides.scss
@@ -188,7 +188,7 @@
 // $form-spacing: emCalc(16px);
 
 // We use these to style the labels in different ways
-// $label-pointer: pointer;
+$label-pointer: default;
 // $label-font-size: emCalc(14px);
 // $label-font-weight: 500;
 // $label-font-color: lighten(#000, 30%);
